# Lab2-GC-Conway-s-Game-of-Life

./: CMakeLists.txt  README.md  main.cpp
